--- a/js/random-messages/v2/impl/_reference/index.html
+++ b/js/random-messages/v2/impl/_reference/index.html
@@ -2,7 +2,7 @@
 
 <body>
   <style>
-    /* CSS для початкового тексту (тригера) */
+    /* CSS for the initial clickable text (trigger) */
     #infoTrigger {
       font-size: 18px;
       color: red;
@@ -10,19 +10,19 @@
       user-select: none;
       display: inline-block;
       padding: 5px;
-      /* Початково прихований, поки JS не визначить, що показати */
+      /* Initially hidden until JS determines what to show */
       visibility: hidden;
       opacity: 0;
       transition: opacity 0.3s ease, visibility 0.3s ease;
     }
 
-    /* Клас для відображення тригера */
+    /* Class for displaying the trigger */
     #infoTrigger.visible {
       visibility: visible;
       opacity: 1;
     }
 
-    /* CSS для спливаючої підказки (Toast) */
+    /* CSS for the pop-up (Toast) */
     .custom-popup {
       position: absolute;
       background-color: #f9f9f9;
@@ -70,7 +70,7 @@
   <span id="infoTrigger">Show product message again</span>
 
   <script>
-    // --- Конфігураційні дані ---
+    // --- Configuration Data ---
     const RANDOM_MESSAGES = [
       'Great choice! You are the best',
       "Fantastic click! What's next?",
@@ -83,29 +83,35 @@
     ];
     const RANDOM_ICONS = ['🌟', '💡', '🚀', '🎉', '💖', '✅', '🥳', '✨'];
 
-    // --- Глобальний стан ---
+    // --- Global State ---
     const infoTrigger = document.getElementById('infoTrigger');
-    const TIMEOUT_DURATION = 5000; // 5 секунд для автозакриття
-    const POPUP_TRANSITION_TIME = 300; // Час CSS переходу
-    let activePopups = []; // Масив для зберігання об'єктів {element, timeoutId}
+    const TIMEOUT_DURATION = 5000; // 5 seconds for auto-close
+    const POPUP_TRANSITION_TIME = 300; // CSS transition time
+    let activePopups = []; // Array to store {element, timeoutId} objects
 
-    // --- Хелпери ---
+    // --- Helper Functions ---
 
+    /**
+     * Gets a random item from an array.
+     * @param {Array<string>} arr - The array to choose from.
+     * @returns {string} A random element from the array.
+     */
     function getRandomItem(arr) {
       const randomIndex = Math.floor(Math.random() * arr.length);
       return arr[randomIndex];
     }
 
     /**
-     * Генерує випадкову кількість підказок (від 1 до 5).
+     * Generates a random number of pop-ups (from 1 to 5).
+     * @returns {number} The random count.
      */
     function getRandomPopupCount() {
       return Math.floor(Math.random() * 5) + 1; // 1 to 5
     }
 
     /**
-     * Змінює видимість тексту-тригера.
-     * @param {boolean} isVisible - Чи повинен тригер бути видимим.
+     * Toggles the visibility of the trigger text.
+     * @param {boolean} isVisible - Whether the trigger should be visible.
      */
     function toggleTriggerVisibility(isVisible) {
       if (isVisible) {
@@ -117,26 +123,26 @@
 
 
     /**
-     * Закриває конкретну підказку, очищає таймер і перевіряє, чи можна показати тригер.
-     * @param {HTMLElement} popupElement - Елемент підказки, яку потрібно закрити.
+     * Closes a specific pop-up, clears the timer, and checks if the trigger can be shown.
+     * @param {HTMLElement} popupElement - The pop-up element to close.
      */
     function closePopup(popupElement) {
-      // 1. Знаходимо та очищаємо таймер
+      // 1. Find and clear the timer
       const index = activePopups.findIndex(p => p.element === popupElement);
       if (index !== -1) {
         clearTimeout(activePopups[index].timeoutId);
-        // Видаляємо з масиву активних
+        // Remove from the active array
         activePopups.splice(index, 1);
       }
 
-      // 2. Анімація зникнення
+      // 2. Fade-out animation
       popupElement.classList.remove('show');
 
-      // 3. Видалення з DOM після завершення переходу
+      // 3. Remove from DOM after transition completion
       setTimeout(() => {
         popupElement.remove();
 
-        // 4. Перевірка: Якщо більше немає активних підказок, показуємо тригер
+        // 4. Check: If no active pop-ups remain, show the trigger
         if (activePopups.length === 0) {
           toggleTriggerVisibility(true);
         }
@@ -144,10 +150,10 @@
     }
 
     /**
-     * Створює одну підказку.
-     * @param {string} message - Текст повідомлення.
-     * @param {string} icon - Іконка.
-     * @returns {HTMLElement} Створений елемент підказки.
+     * Creates a single pop-up element.
+     * @param {string} message - The message text.
+     * @param {string} icon - The icon.
+     * @returns {HTMLElement} The created pop-up element.
      */
     function createPopupElement(message, icon) {
       const popup = document.createElement('div');
@@ -168,7 +174,7 @@
       popup.appendChild(messageEl);
       popup.appendChild(closeBtn);
 
-      // Додаємо обробник події для кнопки закриття
+      // Add event listener for the close button
       closeBtn.addEventListener('click', () => closePopup(popup));
 
       return popup;
@@ -176,27 +182,27 @@
 
 
     /**
-     * Створює та відображає стек підказок (від 1 до 5).
+     * Creates and displays a stack of pop-ups (1 to 5).
      */
     function showPopupStack() {
-      // Якщо підказки вже є, ігноруємо клік
+      // If pop-ups already exist, ignore the click
       if (activePopups.length > 0) {
         return;
       }
 
-      // 1. Ховаємо тригер
+      // 1. Hide the trigger
       toggleTriggerVisibility(false);
 
-      // 2. Визначаємо кількість підказок
+      // 2. Determine the number of pop-ups
       const count = getRandomPopupCount();
 
-      // 3. Визначаємо позицію першої підказки (над тригером)
+      // 3. Determine the initial position of the first pop-up (above the trigger)
       const rect = infoTrigger.getBoundingClientRect();
 
-      // Використовуємо таймаут, щоб дати браузеру час на рендеринг,
-      // перш ніж обчислювати позицію наступних елементів.
+      // Use a timeout to allow the browser time for rendering before calculating 
+      // the position of subsequent elements.
       setTimeout(() => {
-        let currentOffsetTop = rect.top + window.scrollY; // Початкова позиція (верхня межа тригера)
+        let currentOffsetTop = rect.top + window.scrollY; // Initial position (top edge of trigger)
 
         for (let i = 0; i < count; i++) {
           const randomMessage = getRandomItem(RANDOM_MESSAGES);
@@ -208,40 +214,40 @@
           const popupWidth = popup.offsetWidth;
           const popupHeight = popup.offsetHeight;
 
-          // 4. Розрахунок вертикальної позиції
-          // Позиція першої підказки (i=0) - на місці тригера, зсунута вгору.
-          // Наступні підказки зміщуються вгору на висоту попередньої + невеликий відступ (10px).
+          // 4. Calculate vertical position
+          // Position of the first pop-up (i=0) - at the trigger's location, offset upwards.
+          // Subsequent pop-ups are shifted vertically upwards by the height of the previous one + a small margin (10px).
           if (i === 0) {
-            // Перша підказка: 10px над тригером
+            // First pop-up: 10px above the trigger
             currentOffsetTop = rect.top + window.scrollY - popupHeight - 10;
           } else {
-            // Кожна наступна підказка: 10px над попередньою
+            // Each subsequent pop-up: 10px above the previous one
             currentOffsetTop -= (popupHeight + 10);
           }
 
-          // 5. Розрахунок горизонтальної позиції (центруємо над тригером)
+          // 5. Calculate horizontal position (center above the trigger)
           popup.style.left = `${rect.left + window.scrollX + rect.width / 2 - popupWidth / 2
             }px`;
           popup.style.top = `${currentOffsetTop}px`;
 
 
-          // 6. Відображення
+          // 6. Display
           popup.classList.add('show');
 
-          // 7. Налаштування автозакриття та збереження стану
+          // 7. Setup auto-close and save state
           const timeoutId = setTimeout(() => closePopup(popup), TIMEOUT_DURATION);
           activePopups.push({ element: popup, timeoutId: timeoutId });
         }
       }, 1);
     }
 
-    // --- Ініціалізація та обробники подій ---
+    // --- Initialization and Event Listeners ---
 
-    // 1. Прив'язка функції до кліку
+    // 1. Bind the function to the click event
     infoTrigger.addEventListener('click', showPopupStack);
 
-    // 2. Вимога 2: Відображення підказок при завантаженні сторінки
-    // Викликаємо showPopupStack, як тільки DOM повністю завантажиться
+    // 2. Requirement 2: Display pop-ups on page load
+    // Call showPopupStack as soon as the DOM is fully loaded
     document.addEventListener('DOMContentLoaded', showPopupStack);
 
   </script>
